# TDS

./: agent.py  main.py  monoltih.py  pyproject.toml  solve_quiz.py
app/routes/: solve.py
app/schema/: schema.py
app/utils/: tools.py
