[project]
name = "project-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.122.0",
    "httpx>=0.28.1",
    "langchain-core>=1.1.0",
    "langchain-google-genai>=3.2.0",
    "langgraph>=1.0.3",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "pdfplumber>=0.11.8",
    "playwright>=1.56.0",
    "pydantic[email]>=2.12.4",
    "uvicorn[standard]>=0.38.0",
]
